--- a/ToDoApp/todo/package.json
+++ b/ToDoApp/todo/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "chart.js": "^4.2.1",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
@@ -16,7 +17,10 @@
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.8.0"
+    "react-icons": "^4.8.0",
+    "react-outside-click-handler": "^1.3.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
