--- a/ToDoApp/todo/package.json
+++ b/ToDoApp/todo/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^4.2.1",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "nanoid": "^4.0.2",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
