--- a/ToDoApp/todo/package.json
+++ b/ToDoApp/todo/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
     "chart.js": "^4.2.1",
+    "date-fns": "^2.29.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "nanoid": "^4.0.2",
     "next": "13.2.4",
     "react": "18.2.0",
+    "react-calendar": "^4.2.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^12.2.0",
     "react-icons": "^4.8.0",
     "react-outside-click-handler": "^1.3.0",
     "react-redux": "^8.0.5",
