--- a/ToDoApp/todo/package.json
+++ b/ToDoApp/todo/package.json
@@ -6,16 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "netlify-build": "npm run build"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
     "chart.js": "^4.2.1",
     "date-fns": "^2.29.3",
-    "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "nanoid": "^4.0.2",
-    "next": "13.2.4",
     "react": "18.2.0",
     "react-calendar": "^4.2.1",
     "react-chartjs-2": "^5.2.0",
@@ -28,6 +27,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "eslint": "^8.38.0",
+    "next": "^13.3.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.1"
   }
